--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.5.1",
-    "@types/express": "^4.17.21"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
