--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.5.1",
+    "nodemon": "^3.1.11",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
