--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "express": "^5.2.1",
     "zod": "^4.3.6"
   },
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.5.1",
     "nodemon": "^3.1.11",
+    "prisma": "^6.19.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
